# Capstone_Project-Skin_Cancer_Classification

./: .gitignore  README.md  app.py  preprocessing.py  pyproject.toml  requirements.txt
Encoders/: diagnose_cat_label_encoder.joblib  localization_cat_encoder.joblib  pca.joblib
Models/: binary_clf_model.pkl
Scalers/: scaler.joblib
notebooks/: data_processing.ipynb  image_processing.ipynb  model_training.ipynb  utils.py
notebooks/csv/: processed_data.csv
